test/conformance/chainsaw/validate/clusterpolicy/cornercases/check-message-upon-resource-failure-deprecated/policy-assert2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: preconditions-check
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
