test/conformance/chainsaw/validate/clusterpolicy/cornercases/check-message-upon-resource-failure-deprecated/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-message-upon-resource-failure
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy-1.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: require-ns-owner-label
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy-2.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: preconditions-check
  - name: step-03
    try:
    - script:
       content: kubectl apply -f resource.yaml
       check:
         # This check ensures the contents of stderr are exactly as shown.
         (trim_space($stderr)): |-
           Error from server: error when creating "resource.yaml": admission webhook "validate.kyverno.svc-fail" denied the request: 

           resource Namespace//asdfhl was blocked due to the following policies 

           require-ns-owner-label:
             check-for-namespace-owner-label: 'validation error: The label `uw.systems/owner` is required. Check policy at https://github.com/utilitywarehouse/system-manifests/tree/master/kyverno/policies/namespaces/require-ns-owner-label.yaml for allowed label values. rule check-for-namespace-owner-label failed at path /metadata/labels/uw.systems/owner/'
